<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miralak.basicaccelerometer.activity.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:gravity="center_vertical"
            android:text="@string/welcome_msg"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collect_prediction_data" />

        <Button
            android:id="@+id/button_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collect_training_data" />

        <Button
            android:id="@+id/button_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuration" />

    </LinearLayout>

</RelativeLayout>
